--- a/portfolio.html
+++ b/portfolio.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" itemprop="description" content="このサイトはToshikatsu Asaiがテックアカデミーで学んだことを記録したポートフォリオサイトです">
+    <meta name="description" content="このサイトはToshikatsu Asaiがテックアカデミーで学んだことを記録したポートフォリオサイトです">
     <title>MY PORTFOLIO</title>
     <!-- BootstrapのCSS読み込み -->
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
@@ -62,7 +62,7 @@
           
           <div class="panel panel-success"><!-- パネルは、内容を枠線で括りたい時に便利なコンポーネント -->
             <div class="panel-heading">
-              <h3 class="panel-title" id="panel-title">
+              <h3 class="panel-title">
                 <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
                 自己紹介
               </h3>
@@ -85,7 +85,7 @@
           <span class="glyphicon glyphicon-grain" aria-hidden="true"></span> Application Name(1)
              <div class="panel panel-primary"><!-- パネルは、内容を枠線で括りたい時に便利なコンポーネント -->
               <div class="panel-heading">
-              <h3 class="panel-title" id="panel-title">
+              <h3 class="panel-title">
                 <span class="glyphicon glyphicon-grain" aria-hidden="true"></span>
                 サマリ
               </h3>
@@ -98,14 +98,14 @@
          </div><!-- row -->
          
                  <div> <!-- application 2 -->
-         <h1 class="project" id="project1">Application 2</h1>
+         <h1 class="project" id="project2">Application 2</h1>
         </div>
          <div class="row">
            <div class="col-md-8 col-md-offset-2"><!--ページに8/12使用 -->
           <span class="glyphicon glyphicon-grain" aria-hidden="true"></span> Application Name(2)
              <div class="panel panel-danger"><!-- パネルは、内容を枠線で括りたい時に便利なコンポーネント -->
               <div class="panel-heading">
-              <h3 class="panel-title" id="panel-title">
+              <h3 class="panel-title">
                 <span class="glyphicon glyphicon-grain" aria-hidden="true"></span>
                 サマリ
               </h3>
@@ -125,7 +125,7 @@
           <span class="glyphicon glyphicon-grain" aria-hidden="true"></span> Application Name(3)
              <div class="panel panel-info"><!-- パネルは、内容を枠線で括りたい時に便利なコンポーネント -->
               <div class="panel-heading">
-              <h3 class="panel-title" id="panel-title">
+              <h3 class="panel-title">
                 <span class="glyphicon glyphicon-grain" aria-hidden="true"></span>
                 サマリ
               </h3>
@@ -145,7 +145,7 @@
           <span class="glyphicon glyphicon-grain" aria-hidden="true"></span> Application Name(4)
              <div class="panel panel-warning"><!-- パネルは、内容を枠線で括りたい時に便利なコンポーネント -->
               <div class="panel-heading">
-              <h3 class="panel-title" id="panel-title">
+              <h3 class="panel-title">
                 <span class="glyphicon glyphicon-grain" aria-hidden="true"></span>
                 サマリ
               </h3>
